# pr-splitter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
skills/split-pr/: SKILL.md
src/pr_splitter/: cli.py  errors.py  git_ops.py  github.py  models.py  splitter.py
tests/: conftest.py  test_cli.py  test_git_ops.py  test_github.py  test_models.py  test_splitter.py
vscode-extension/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
vscode-extension/src/: dragState.ts  extension.ts  gitHelper.ts  groupsTreeProvider.ts  sourceTreeProvider.ts  splitModel.ts  splitTreeProvider.ts  treeHelpers.ts  treeNodes.ts
vscode-extension/src/__tests__/: dragState.test.ts  gitHelper.test.ts  splitModel.test.ts  treeHelpers.test.ts
vscode-extension/src/__tests__/__mocks__/: vscode.ts
